# zst

./: .cirrus.yml  .gitignore  CMakeLists.txt  LICENSE  README.md  bzip3.c  compress.c  compress.h  config.h.cmake  prefix.c  prefix.h  zst.1  zst.c  zst.h
.github/workflows/: codecov.yml  codeql.yml  coverity.yml
debian/: changelog  control  copyright  rules  watch
debian/source/: include-binaries
debian/tests/: canned  control  meow.bz2  meow.xz  meow.zst
debian/upstream/: metadata
tests/: CMakeLists.txt  cd-argv0-NOVG.t  cdf-file-suffix.t  d-argv0-NOVG.t  d-bigfile.t  d-bigfile0.t  d-bigfileR.t  d-dir-nosuffix.T  d-dir.t  d-emptyfile.t  d-file-corrupted.t  d-file-exist.t  d-file-noperm.t  d-file-notcomp.T  d-file-truncated.t  d-file.t  d-pipe-truncations.t  dc-file.t  df-file-notcomp.T  dq-warn.t  runtest.sh  t-dir.t  t-file.t  t-pipe-empty.t  z-argv0-NOVG.t  z-badfmt.T  z-bigfile.t  z-bigfile0.t  z-bigfileR.t  z-dir-alreadysuffix.t  z-dir-nonreg.T  z-emptyfile.t  z-file-alreadysuffix.t  z-file-exist.t  z-file-isdir.T  z-file-nonreg.T  z-file-noperm.t  z-file.t  z-level.t  z-unknownformat.T  (+9 more)
